# ChangeLog for dev-util/cmake
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cmake/ChangeLog,v 1.92 2009/05/02 23:34:01 cryos Exp $

*cmake-2.6.4 (02 May 2009)

  02 May 2009; Marcus D. Hanwell <cryos@gentoo.org> +cmake-2.6.4.ebuild:
  Version bump, applied patch from bug 266383.

  13 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> cmake-2.6.3-r1.ebuild:
  Fix the has_version check. Current eclass does not support cmake 2.4...

  11 Apr 2009; Joshua Kinard <kumba@gentoo.org> cmake-2.6.3-r1.ebuild:
  Added ~mips to KEYWORDS.

*cmake-2.6.3-r1 (04 Apr 2009)

  04 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org>
  -files/cmake-2.0.6-rpath-fix.patch, -files/cmake-2.4.7-findkde4.patch,
  -files/FindSWIG.cmake, +files/cmake-FindJNI.patch, -cmake-2.4.7-r1.ebuild,
  -cmake-2.4.8.ebuild, -cmake-2.6.3.ebuild, +cmake-2.6.3-r1.ebuild:
  Revision bump. Introduce some fixes. Remove old.

  15 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> -cmake-2.4.6-r1.ebuild,
  -cmake-2.6.2.ebuild:
  Remove old.

  14 Mar 2009; Raúl Porcel <armin76@gentoo.org> cmake-2.6.2-r1.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #259741

  11 Mar 2009; Brent Baude <ranger@gentoo.org> cmake-2.6.2-r1.ebuild:
  Marking cmake-2.6.2-r1 ppc64 for bug 259741

  08 Mar 2009; Markus Meier <maekke@gentoo.org> cmake-2.6.2-r1.ebuild:
  x86 stable, bug #259741

  07 Mar 2009; Jeremy Olexa <darkside@gentoo.org> cmake-2.6.2-r1.ebuild:
  amd64 stable, bug 259741

  01 Mar 2009; nixnut <nixnut@gentoo.org> cmake-2.6.2-r1.ebuild:
  ppc stable #259741

*cmake-2.6.3 (01 Mar 2009)

  01 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> +cmake-2.6.3.ebuild:
  Version bump.

  22 Feb 2009; Tobias Klausmann <klausman@gentoo.org> cmake-2.6.2-r1.ebuild:
  Stable on alpha, bug #259741

  20 Feb 2009; Jeroen Roovers <jer@gentoo.org> cmake-2.6.2-r1.ebuild:
  Stable for HPPA (bug #259741).

  03 Feb 2009; Tomas Chvatal <scarabeus@gentoo.org> cmake-2.6.2-r1.ebuild: