@@ -16,6 +16,6 @@ DIST cmake-2.6.3.tar.gz 3594959 RMD160 14f0e878844f55a1b3d02837e98087dcaabb16be 
 DIST cmake-2.6.4.tar.gz 3285371 RMD160 e4217067537f76e52317514cb5bb0cf38733d16a SHA1 c7e295683e061c2ed19773a1f0444972f75db092 SHA256 9cdd2152e37b05d0d40d334a1bb2dfc0250021797360f971c6ea3d457ac9fdf2
 EBUILD cmake-2.6.2-r1.ebuild 3032 RMD160 ebe2d638f346195d565b63554710aab5b13a27a7 SHA1 2c1fbdf165771f7193a8f7f0963e27fbfebd5ece SHA256 2ffb180e7eb9804824041356821a81e84b44ee3d7b64fbf66312daf793d5a680
 EBUILD cmake-2.6.3-r1.ebuild 3540 RMD160 db01fea3d6ff4cd2368231b15183d016ee719d69 SHA1 60f0a63706dbc370766d3220f493679c9ae704d0 SHA256 d581afdbe2b8c104328f8a1cb40b37a0d90eb4f87ee06a6067d65e217998f74c
-EBUILD cmake-2.6.4.ebuild 3744 RMD160 b626e690e40f4d515091403c8109f52f69cd1888 SHA1 84246c1e62f901c46c794bb3780157bbefa7b182 SHA256 4078e8eb7f53c4bd99c2ce246e980fc3917debac8d86bad1770a1a435c2fd8ae
-MISC ChangeLog 14144 RMD160 3166daf116905ce0c151b9045c684c61b2840cff SHA1 4f6da502ba15480da09da3fdd2ae371ad7d43c52 SHA256 57e692a809196cd1519d1a3ebaeb51e33311fad5ecad0d2e47863f8a58377a36
+EBUILD cmake-2.6.4.ebuild 3758 RMD160 a7b969f388862e54260dbe1014299e420f3c88ed SHA1 038c314c148947a116c6c9e8bd3188d788fd4b87 SHA256 67d01554a57b997306649e548e089c648c751d1d6fe9daa5e8743002910776a4
+MISC ChangeLog 14355 RMD160 6b3ea7ce7a9353599a72718b44373104b8693d18 SHA1 b8369d765d1c1830588773fa08c7c96f835fed84 SHA256 8ab1d77b59af760fdf816617139d14a288e6cfd3e322828a76193f06e7654d4c
 MISC metadata.xml 157 RMD160 09fb7b798f3f68127626e97c69e5215a0513ecbb SHA1 d5ffebb2f4248fc8f65ab21c3af6e4f5dbf8bf6e SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892
