@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/cmake
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cmake/ChangeLog,v 1.92 2009/05/02 23:34:01 cryos Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cmake/ChangeLog,v 1.94 2009/05/03 14:06:49 arfrever Exp $
+
+  03 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  cmake-2.6.4.ebuild:
+  Fix syntax.
+
+  03 May 2009; Marcus D. Hanwell <cryos@gentoo.org> cmake-2.6.4:
+  Fixed to the bootstrap logic.
 
 *cmake-2.6.4 (02 May 2009)
 
